updated gitignore to ignore eagle temp files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 Marlin/**
+
+/**/*.s#[0-9]
+/**/*.s$[0-9]
+/**/*.s##
+/**/*.b#[0-9]
+/**/*.b$[0-9]
+/**/*.b##
+/**/*.lck
+/**/eagle.epf
+/**/*.pro
+/**/*.job
+/**/*.zip
+/**/CAMOutputs*
